my major commit

--- a/XSS analysis/SVM/saving_svm_main.ipynb
+++ b/XSS analysis/SVM/saving_svm_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
     "    new_arr = np.array(new_arr)\n",
     "    return new_arr\n",
     "\n",
-    "oll = pd.read_csv('all_data1.csv',encoding='utf-8')\n",
+    "oll = pd.read_csv('data.csv',encoding='utf-8')\n",
     "for i in range(1):\n",
     "    train_data, test_data = train_test_split(oll, test_size=0.01)\n",
     "    train_data.columns = ['payload','type']\n",
